--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -3,9 +3,9 @@ pipeline {
     options {disableConcurrentBuilds()}
     environment {        
         GOOGLE_PROJECT_ID = "jovial-atlas-375801" 
-        GOOGLE_PROJECT_NAME = "tenpo"
-        GOOGLE_APPLICATION_CREDENTIALS = credentials('sc_jenkins_terraform_test2')
-        GOOGLE_CLOUD_KEYFILE_JSON = credentials('sc_jenkins_terraform_test2')
+        GOOGLE_PROJECT_NAME = "retro"
+        GOOGLE_APPLICATION_CREDENTIALS = credentials('retro')
+        GOOGLE_CLOUD_KEYFILE_JSON = credentials('retro')
     }
     parameters { 
       choice(name: 'ENTORNOS', choices: ['dev', 'pre', 'pro'], description: 'Seleccione el entorno a utilizar')
