--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -2,17 +2,16 @@ pipeline {
     agent any
     options {disableConcurrentBuilds()}
     environment {        
-        GOOGLE_PROJECT_ID = "jovial-atlas-375801" 
+        GOOGLE_PROJECT_ID = "retro-376614" 
         GOOGLE_PROJECT_NAME = "retro"
         GOOGLE_APPLICATION_CREDENTIALS = credentials('retro')
         GOOGLE_CLOUD_KEYFILE_JSON = credentials('retro')
     }
     parameters { 
       choice(name: 'ENTORNOS', choices: ['dev', 'pre', 'pro'], description: 'Seleccione el entorno a utilizar')
-      choice(name: 'ACCION', choices: ['', 'plan-apply', 'destroy', 'test', 'build', 'deploy'], description: 'Seleccione el entorno a utilizar')
+      choice(name: 'ACCION', choices: ['', 'plan-apply', 'destroy', 'build', 'deploy'], description: 'Seleccione el entorno a utilizar')
     }
-    stages{
-        
+    stages{        
         stage('clean workspaces -----------') { 
             steps {
               cleanWs()
@@ -21,7 +20,7 @@ pipeline {
         }  //stage
 
         //${params.Acción}
-        stage("git clone code terraform"){
+        stage("git clone code"){
             steps {
                 cleanWs()
                     checkout([$class: 'GitSCM', 
@@ -30,23 +29,41 @@ pipeline {
                     extensions: [[$class: 'CleanCheckout']], 
                     submoduleCfg: [], 
                     userRemoteConfigs: [
-                        [url: 'https://github.com/richardyantas/tenpo.git', credentialsId: '']
+                        [url: 'https://github.com/richardyantas/retro.git', credentialsId: '']
                         ]])
                 sh 'pwd' 
                 sh 'ls -l'
             } //steps
         }  //stage
+
+        stage('Build') {
+            steps {
+                script{
+                    if (params.ACCION == "build"){                
+                        sh 'pip install -r requirements/prod.txt'                 
+                    }
+                }
+            }
+        }
+
+        stage('Test') {
+            steps {
+                // Connect to the VM and clone repository and run app.py
+                // sh 'pip install -r requirements/prod.txt' 
+                sh 'python3 -m pytest' 
+            }
+        }
     
         stage('Terraform init----') {
          steps {
             sh 'terraform --version'            
-            sh 'terraform init '
+            sh 'cd ci-cd && terraform init '
             } //steps
         }  //stage
 
         stage('Terraform plan----') {
-            steps {               
-               sh 'terraform plan  -refresh=true -lock=false'
+            steps {
+               sh 'cd ci-cd && terraform plan  -refresh=true -lock=false'
             } //steps
         }  //stage
         
@@ -64,24 +81,20 @@ pipeline {
             script{  
                 if (params.ACCION == "destroy"){
                          sh ' echo "llego" + params.ACCION'   
-                         sh 'terraform destroy -auto-approve'
-                } else {
+                         sh 'cd ci-cd && terraform destroy -auto-approve'
+                } 
+                if (params.ACCION == "plan-apply"){
                          sh ' echo  "llego" + params.ACCION'                 
-                         sh 'terraform apply -refresh=true  -auto-approve'  
+                         sh 'cd ci-cd && terraform apply -refresh=true  -auto-approve'  
                 }  // if
+                //else {
+                //         sh ' echo  "llego" + params.ACCION'                 
+                //         sh 'terraform apply -refresh=true  -auto-approve'  
+                // }  // if
 
             }
             } //steps
-        }  //stage
-
-
-        // stage('Test') {
-        //     // Connect to the VM and clone repository and run app.py
-        //     if (params.ACCION != "test"){
-        //         sh 'python3 -m pytest'
-
-        //     }
-        // }
+        }  //stage        
 
         // stage('Build') {
         //     // Connect to the VM and clone repository and run app.py
